infra/k8s/backend-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-backend-depl
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: willycedric/shopping-backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-srv
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 3000
      targetPort: 3000
