infra/k8s/backend-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-mongo
  template:
    metadata:
      labels:
        app: backend-mongo
    spec:
      containers:
        - name: backend-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: backend-mongo-srv
spec:
  selector:
    app: backend-mongo
  ports:
    - name: db
      port: 27017
      targetPort: 27017
      protocol: TCP
