infra/k8s/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-client-depl
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: willycedric/shopping-client
          stdin: true
          tty: true

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
